--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-<div id="canvas"></div>
+<canvas id="xxx" width=300 height=300></canvas>
+  <div id=actions class="actions">
+    <button id=eraser>橡皮擦</button>
+    <button id=brush>画笔</button>
+  </div>
 <script src="./main.js">
 </script>
 </body>
