--- a/canvas_second.html
+++ b/canvas_second.html
@@ -8,61 +8,62 @@ Copyright (c) 2018 by zxldcr (http://js.jirengu.com/muxip/3/edit)
 Released under the MIT license: http://jsbin.mit-license.org
 -->
 <meta name="robots" content="noindex">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>画板第二次</title>
+<meta charset="utf-8">
+<title>画板第二次</title>
 <style id="jsbin-css">
 body{
-  margin: 0px;
-  padding: 0px;
-  border: 1px solid;
+margin: 0px;
+padding: 0px;
+border: 1px solid;
 }
 #xxx{
-  background: green;
-  display: block;
-  
+background: green;
+display: block;
+
 }
 .actions{
-  position: fixed;
-  bottom: 0;
-  left: 0;
+position: fixed;
+bottom: 0;
+left: 0;
 }
 .actions > #brush{
-  display: none;
+display: none;
 }
 .actions.x>#brush{
-  display: inline-block;
+display: inline-block;
 }
 .actions.x>#eraser{
-  display: none;
+display: none;
 }
 </style>
 </head>
 <body>  
-    <canvas id="xxx" width=300 height=300></canvas>
-  <div id = "actions" class="actions">
-    <button id = "eraser">橡皮擦</button>
-    <button id = "brush">画笔</button>
-  </div>
-  
+  <canvas id="xxx" width=300 height=300></canvas>
+<div id = "actions" class="actions">
+  <button id = "eraser">橡皮擦</button>
+  <button id = "brush">画笔</button>
+</div>
+
 <script id="jsbin-javascript">
 var yyy=document.getElementById('xxx');
 var context=yyy.getContext('2d');
 
 autoSetCanvasSize(yyy)//获取页面大小
-listenToMouse(yyy)//监听鼠标事件
+listenToUser(yyy)//监听鼠标事件
 
 /**********/
 
 var eraserEnabled = false
 eraser.onclick = function(){
-  eraserEnabled = true  
-  actions.className = "actions x"
+eraserEnabled = true  
+actions.className = "actions x"
 }
 brush.onclick = function(){
-  eraserEnabled = false
-  actions.className = "actions"
+eraserEnabled = false
+actions.className = "actions"
 }
 
 /********/
@@ -75,57 +76,95 @@ yyy.height = pageHeight
 }//获取页面宽高,可以随着页面大小改变canvas的大小
 
 function autoSetCanvasSize(canvas){
+setCanvasSize()
+window.onresize = function(){
   setCanvasSize()
-  window.onresize = function(){
-    setCanvasSize()
-  }
+}
 
 }
 
 function drawLine(x1,y1,x2,y2){
-  var colorSelected={red: 'red',green: 'green',black: 'black'}
-  context.beginPath()
-  context.strokeStyle=colorSelected.red 
-  context.moveTo(x1,y1)//起点
-  context.lineWidth=5
-  context.lineTo(x2,y2)//终点
-  context.stroke()
-  context.closePath()
+var colorSelected={red: 'red',green: 'green',black: 'black'}
+context.beginPath()
+context.strokeStyle=colorSelected.red 
+context.moveTo(x1,y1)//起点
+context.lineWidth=5
+context.lineTo(x2,y2)//终点
+context.stroke()
+context.closePath()
 }
 
-function listenToMouse(yyy){  
-  var using = false
-  var lastPoint = {x: undefined,y: undefined}
-  yyy.onmousedown = function(aaa){
-  var x = aaa.clientX
-  var y = aaa.clientY
-  
-  using=true
-  if(eraserEnabled){   
+function listenToUser(canvas){  
+var using = false
+var lastPoint = {x: undefined,y: undefined}
+
+if(document.body.ontouchstart !== undefined){//触屏设备
+canvas.ontouchstart = function(aaa){
+var x = aaa.touches[0].clientX
+var y = aaa.touches[0].clientY
+console.log(x,y)
+using=true
+if(eraserEnabled){   
+context.clearRect(x-5,y-5,10,10)
+}else{
+lastPoint={x:x,y:y} 
+}
+}
+canvas.ontouchmove = function(aaa){
+var x = aaa.touches[0].clientX
+var y = aaa.touches[0].clientY
+
+if(eraserEnabled){
+  if(using){
     context.clearRect(x-5,y-5,10,10)
-  }else{
-  lastPoint={x:x,y:y} 
-  }
+  }        
+}else{
+if(using){
+    var newPoint={x:x,y:y}
+    drawLine(lastPoint.x,lastPoint.y,newPoint.x,newPoint.y)
+    lastPoint= newPoint
+}
+}
+}
+canvas.ontouchend = function(){
+using=false
+
+}
+}else{
+//非触屏设备
+canvas.onmousedown = function(aaa){
+var x = aaa.clientX
+var y = aaa.clientY
+
+using=true
+if(eraserEnabled){   
+context.clearRect(x-5,y-5,10,10)
+}else{
+lastPoint={x:x,y:y} 
+}
 }
 
-yyy.onmousemove = function(aaa){
-  var x=aaa.clientX
-  var y=aaa.clientY
-  if(eraserEnabled){
-     if(using){
-       context.clearRect(x-5,y-5,10,10)
-     }        
-  }else{
-    if(using){
-        var newPoint={x:x,y:y}
-        drawLine(lastPoint.x,lastPoint.y,newPoint.x,newPoint.y)
-        lastPoint= newPoint
-   }
-  }
+canvas.onmousemove = function(aaa){
+var x=aaa.clientX
+var y=aaa.clientY
+
+if(eraserEnabled){
+  if(using){
+    context.clearRect(x-5,y-5,10,10)
+  }        
+}else{
+if(using){
+    var newPoint={x:x,y:y}
+    drawLine(lastPoint.x,lastPoint.y,newPoint.x,newPoint.y)
+    lastPoint= newPoint
+}
 }
 
-yyy.onmouseup = function(aaa){
-  using=false
+}
+
+canvas.onmouseup = function(aaa){
+using=false
+}
 }
 
 }
