--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <use xlink:href="#icon-qingkong_xiangpica"></use>
 </svg> 
 </div>
+<ol class = "colors">
+  <li id=red class="red"></li>
+  <li id=yellow class="yellow"></li>
+  <li id=blue class="blue"></li>
+</ol>
 <script src="./main.js"></script>
 <script src="//at.alicdn.com/t/font_573371_qmibnfkg2f4oyldi.js"></script>
 </body>
